# darkwall-drun

./: Cargo.toml  README.md  config.example.toml  flake.nix
.windsurf/rules/: manual-cli-testing.md
docs/: ARCHITECTURE.md  CUSTOM_FIELDS.md  DEPENDENCIES.md  DEVELOPMENT.md  GETTING_STARTED.md  KNOWN_ISSUES.md  NIRI_SETUP.md  NIXOS_SETUP.md  REQUIREMENTS.md  SYSTEM_REQUIREMENTS.md  TESTING.md  USAGE.md
docs/phases/: phase-1-basic-launcher.md
docs/phases/phase-10-async-pty/: README.md
docs/phases/phase-10-terminal-emulator/: README.md  unit-10.1-dependencies.md  unit-10.2-surface.md  unit-10.3-escape-sequences.md  unit-10.4-rendering.md  unit-10.5-input.md  unit-10.6-cleanup.md
docs/phases/phase-2-in-place-execution/: README.md  unit-2.1-pty-allocation.md  unit-2.4-interactive-mode.md
docs/phases/phase-3-niri-ipc/: README.md  unit-3.1-ipc-protocol.md
docs/phases/phase-4-advanced-metadata/: README.md  unit-4.1-terminal-mode-schema.md  unit-4.2-ssh-detection.md  unit-4.3-output-preservation.md  unit-4.4-custom-fields.md
docs/phases/phase-5-history/: README.md
docs/phases/phase-5-polish/: README.md  unit-5.1-frecency-sorting.md  unit-5.2-categories.md  unit-5.3-icons.md  unit-5.4-theming.md  unit-5.4.1-grid-layout.md  unit-5.4.2-entry-cards.md  unit-5.4.3-color-system.md  unit-5.4.4-configuration.md
docs/phases/phase-6-icons/: README.md
docs/phases/phase-6-open-folder/: README.md
docs/phases/phase-8-exit-status/: README.md
docs/phases/phase-9-niri-features/: README.md
docs/teams/: TEAM_000_phase2_implementation.md  TEAM_001_frecency_integration.md  TEAM_002_icons.md  TEAM_003_theming_prep.md  TEAM_004_theming_integration.md
src/: action.rs  app.rs  config.rs  desktop_entry.rs  executor.rs  history.rs  icons.rs  main.rs  niri.rs  pty.rs  terminal.rs  ui.rs
src/terminal/: config.rs  emulator.rs  input.rs  mod.rs  tests.rs  widget.rs
src/ui/: draw.rs  entry_card.rs  layout.rs  mod.rs  theme.rs
src/ui/draw/: execution.rs  launcher.rs  mod.rs
(+7 files in other folders)
