[package]
name = "darkwall-drun"
version = "0.1.0"
edition = "2021"
description = "TUI application launcher - reads .desktop files, works over SSH"
authors = ["Vince"]
license = "MIT"
repository = "https://github.com/vince/darkwall-drun"

[[bin]]
name = "drun"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Desktop entries
freedesktop-desktop-entry = "0.7"
freedesktop-icons = "0.2"

# Fuzzy matching
nucleo-matcher = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
shellexpand = "3"

# PTY handling (Phase 2)
portable-pty = "0.8"

# ANSI parsing (Phase 2)
vte = "0.13"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Image support for Kitty/Sixel graphics
ratatui-image = "3"
image = "0.25"

# Synchronization
parking_lot = "0.12"

[features]
default = []

[profile.release]
lto = true
strip = true
